fix(elements): align ino-icon vertically (#1379)
Closes #1340

## Proposed Changes

- Added `vertical-alignment: middle;` to the ino-icon.
- Adjusted alignment settings for all parent components that are
affected by this change to ensure consistent vertical alignment

Parent components that needed adjustment:
- [x] ino-button
- [x] ino-chip
- [x] ino-icon-button (this also seemed to fix the misaligned ripple
issue that has been reocurring before)
- [x] ino-select

other components like the ino-avatar didnt need any refactoring

--- a/packages/elements/src/components/ino-select/ino-select.scss
+++ b/packages/elements/src/components/ino-select/ino-select.scss
@@ -137,7 +137,7 @@ ino-select {
     }
 
     .mdc-select__icon {
-      margin-top: 12px;
+      margin-top: 6px;
     }
 
     .mdc-select__dropdown-icon {
@@ -168,6 +168,10 @@ ino-select {
   .mdc-select--outlined {
     .mdc-select__selected-text {
       margin-top: 16px;
+    }
+
+    .mdc-select__icon {
+      margin-top: 2px;
     }
 
     .mdc-floating-label.mdc-floating-label--float-above {
